# vllm-beamsearch-plugin

./: BART_BEAM_SEARCH.md  README.md  pyproject.toml
tests/: test_beam_state.py  test_e2e.py  test_model_state_patch.py  test_mrv2_sampler_rewrite.py  test_scheduler_reconcile.py
vllm_beam_search/: __init__.py  beam_state.py  beam_types.py  logits_processor.py  mrv2_sampler.py  scheduler.py  stress_server.py
